--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>7.0.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
+
     </dependencies>
 
 </project>
